qt/gen_qtextedit.h

class QColor;
class QFont;
class QMetaObject;
class QRegExp;
class QRegularExpression;
class QTextCharFormat;
class QTextCursor;
class QTextDocument;
class QTextEdit;
typedef QTextEdit::ExtraSelection QTextEdit__ExtraSelection;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QHideEvent QHideEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRegExp QRegExp;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextEdit QTextEdit;
typedef struct QTextEdit__ExtraSelection QTextEdit__ExtraSelection;
typedef struct QWidget QWidget;
bool QTextEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTextEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTextEdit_virtualbase_paintEngine(const void* self);
bool QTextEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_enterEvent(void* self, QEvent* event);
bool QTextEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTextEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTextEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTextEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTextEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTextEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTextEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTextEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QTextEdit_override_virtual_metric(void* self, intptr_t slot);
int QTextEdit_virtualbase_metric(const void* self, int param1);
bool QTextEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QTextEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTextEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTextEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QTextEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTextEdit_virtualbase_sharedPainter(const void* self);
bool QTextEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTextEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QTextEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QTextEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTextEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTextEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTextEdit_staticMetaObject();
void QTextEdit_delete(QTextEdit* self);
QTextEdit__ExtraSelection* QTextEdit__ExtraSelection_new(QTextEdit__ExtraSelection* param1);
void QTextEdit__ExtraSelection_operatorAssign(QTextEdit__ExtraSelection* self, QTextEdit__ExtraSelection* param1);
void QTextEdit__ExtraSelection_delete(QTextEdit__ExtraSelection* self);