qt/gen_qtextedit.nim

proc fcQTextEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_hasHeightForWidth".}
proc fQTextEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_paintEngine".}
proc fcQTextEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_paintEngine".}
proc fQTextEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_enterEvent".}
proc fcQTextEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_enterEvent".}
proc fQTextEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_leaveEvent".}
proc fcQTextEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_leaveEvent".}
proc fQTextEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_moveEvent".}
proc fcQTextEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_moveEvent".}
proc fQTextEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_closeEvent".}
proc fcQTextEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_closeEvent".}
proc fQTextEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_tabletEvent".}
proc fcQTextEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_tabletEvent".}
proc fQTextEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_actionEvent".}
proc fcQTextEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_actionEvent".}
proc fQTextEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_hideEvent".}
proc fcQTextEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_hideEvent".}
proc fQTextEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QTextEdit_virtualbase_nativeEvent".}
proc fcQTextEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_nativeEvent".}
proc fQTextEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTextEdit_virtualbase_metric".}
proc fcQTextEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_metric".}
proc fQTextEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTextEdit_virtualbase_initPainter".}
proc fcQTextEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_initPainter".}
proc fQTextEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTextEdit_virtualbase_redirected".}
proc fcQTextEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_redirected".}
proc fQTextEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_sharedPainter".}
proc fcQTextEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_sharedPainter".}
proc fQTextEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_childEvent".}
proc fcQTextEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_childEvent".}
proc fQTextEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTextEdit_virtualbase_customEvent".}
proc fcQTextEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_customEvent".}
proc fQTextEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTextEdit_virtualbase_connectNotify".}
proc fcQTextEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_connectNotify".}
proc fQTextEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTextEdit_virtualbase_disconnectNotify".}
proc fcQTextEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_disconnectNotify".}
proc fcQTextEdit_staticMetaObject(): pointer {.importc: "QTextEdit_staticMetaObject".}
proc fcQTextEdit_delete(self: pointer) {.importc: "QTextEdit_delete".}
proc fcQTextEditExtraSelection_new(param1: pointer): ptr cQTextEditExtraSelection {.importc: "QTextEdit__ExtraSelection_new".}
proc fcQTextEditExtraSelection_operatorAssign(self: pointer, param1: pointer): void {.importc: "QTextEdit__ExtraSelection_operatorAssign".}
proc fcQTextEditExtraSelection_delete(self: pointer) {.importc: "QTextEdit__ExtraSelection_delete".}


func init*(T: type QTextEdit, h: ptr cQTextEdit): QTextEdit =
  T(h: h)
proc create*(T: type QTextEdit, parent: gen_qwidget.QWidget): QTextEdit =

  QTextEdit.init(fcQTextEdit_new(parent.h))
proc create*(T: type QTextEdit, ): QTextEdit =

  QTextEdit.init(fcQTextEdit_new2())
proc create*(T: type QTextEdit, text: string): QTextEdit =

  QTextEdit.init(fcQTextEdit_new3(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QTextEdit, text: string, parent: gen_qwidget.QWidget): QTextEdit =

  QTextEdit.init(fcQTextEdit_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))
proc metaObject*(self: QTextEdit, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTextEdit_metaObject(self.h))

proc metacast*(self: QTextEdit, param1: cstring): pointer =

  fcQTextEdit_metacast(self.h, param1)

proc metacall*(self: QTextEdit, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTextEdit_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTextEdit, s: cstring): string =

  let v_ms = fcQTextEdit_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QTextEdit, s: cstring): string =

  let v_ms = fcQTextEdit_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setDocument*(self: QTextEdit, document: gen_qtextdocument.QTextDocument): void =

  fcQTextEdit_setDocument(self.h, document.h)

proc document*(self: QTextEdit, ): gen_qtextdocument.QTextDocument =

  gen_qtextdocument.QTextDocument(h: fcQTextEdit_document(self.h))

proc setPlaceholderText*(self: QTextEdit, placeholderText: string): void =

  fcQTextEdit_setPlaceholderText(self.h, struct_miqt_string(data: placeholderText, len: csize_t(len(placeholderText))))

proc placeholderText*(self: QTextEdit, ): string =

  let v_ms = fcQTextEdit_placeholderText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTextCursor*(self: QTextEdit, cursor: gen_qtextcursor.QTextCursor): void =

  fcQTextEdit_setTextCursor(self.h, cursor.h)

proc textCursor*(self: QTextEdit, ): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQTextEdit_textCursor(self.h))

proc isReadOnly*(self: QTextEdit, ): bool =

  fcQTextEdit_isReadOnly(self.h)

proc setReadOnly*(self: QTextEdit, ro: bool): void =

  fcQTextEdit_setReadOnly(self.h, ro)

proc setTextInteractionFlags*(self: QTextEdit, flags: gen_qnamespace.TextInteractionFlag): void =

  fcQTextEdit_setTextInteractionFlags(self.h, cint(flags))

proc textInteractionFlags*(self: QTextEdit, ): gen_qnamespace.TextInteractionFlag =

  gen_qnamespace.TextInteractionFlag(fcQTextEdit_textInteractionFlags(self.h))

proc fontPointSize*(self: QTextEdit, ): float64 =

  fcQTextEdit_fontPointSize(self.h)

proc fontFamily*(self: QTextEdit, ): string =

  let v_ms = fcQTextEdit_fontFamily(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc fontWeight*(self: QTextEdit, ): cint =

  fcQTextEdit_fontWeight(self.h)

proc fontUnderline*(self: QTextEdit, ): bool =

  fcQTextEdit_fontUnderline(self.h)

proc fontItalic*(self: QTextEdit, ): bool =

  fcQTextEdit_fontItalic(self.h)

proc textColor*(self: QTextEdit, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQTextEdit_textColor(self.h))

proc textBackgroundColor*(self: QTextEdit, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQTextEdit_textBackgroundColor(self.h))

proc currentFont*(self: QTextEdit, ): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQTextEdit_currentFont(self.h))

proc alignment*(self: QTextEdit, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQTextEdit_alignment(self.h))

proc mergeCurrentCharFormat*(self: QTextEdit, modifier: gen_qtextformat.QTextCharFormat): void =

  fcQTextEdit_mergeCurrentCharFormat(self.h, modifier.h)

proc setCurrentCharFormat*(self: QTextEdit, format: gen_qtextformat.QTextCharFormat): void =

  fcQTextEdit_setCurrentCharFormat(self.h, format.h)

proc currentCharFormat*(self: QTextEdit, ): gen_qtextformat.QTextCharFormat =

  gen_qtextformat.QTextCharFormat(h: fcQTextEdit_currentCharFormat(self.h))

proc autoFormatting*(self: QTextEdit, ): QTextEditAutoFormattingFlag =

  QTextEditAutoFormattingFlag(fcQTextEdit_autoFormatting(self.h))

proc setAutoFormatting*(self: QTextEdit, features: QTextEditAutoFormattingFlag): void =

  fcQTextEdit_setAutoFormatting(self.h, cint(features))

proc tabChangesFocus*(self: QTextEdit, ): bool =

  fcQTextEdit_tabChangesFocus(self.h)

proc setTabChangesFocus*(self: QTextEdit, b: bool): void =

  fcQTextEdit_setTabChangesFocus(self.h, b)

proc setDocumentTitle*(self: QTextEdit, title: string): void =

  fcQTextEdit_setDocumentTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc documentTitle*(self: QTextEdit, ): string =

  let v_ms = fcQTextEdit_documentTitle(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isUndoRedoEnabled*(self: QTextEdit, ): bool =

  fcQTextEdit_isUndoRedoEnabled(self.h)

proc setUndoRedoEnabled*(self: QTextEdit, enable: bool): void =

  fcQTextEdit_setUndoRedoEnabled(self.h, enable)

proc lineWrapMode*(self: QTextEdit, ): QTextEditLineWrapMode =

  QTextEditLineWrapMode(fcQTextEdit_lineWrapMode(self.h))

proc setLineWrapMode*(self: QTextEdit, mode: QTextEditLineWrapMode): void =

  fcQTextEdit_setLineWrapMode(self.h, cint(mode))

proc lineWrapColumnOrWidth*(self: QTextEdit, ): cint =

  fcQTextEdit_lineWrapColumnOrWidth(self.h)

proc setLineWrapColumnOrWidth*(self: QTextEdit, w: cint): void =

  fcQTextEdit_setLineWrapColumnOrWidth(self.h, w)

proc wordWrapMode*(self: QTextEdit, ): gen_qtextoption.QTextOptionWrapMode =

  gen_qtextoption.QTextOptionWrapMode(fcQTextEdit_wordWrapMode(self.h))

proc setWordWrapMode*(self: QTextEdit, policy: gen_qtextoption.QTextOptionWrapMode): void =

  fcQTextEdit_setWordWrapMode(self.h, cint(policy))

proc find*(self: QTextEdit, exp: string): bool =

  fcQTextEdit_find(self.h, struct_miqt_string(data: exp, len: csize_t(len(exp))))

proc findWithExp*(self: QTextEdit, exp: gen_qregexp.QRegExp): bool =

  fcQTextEdit_findWithExp(self.h, exp.h)

proc find2*(self: QTextEdit, exp: gen_qregularexpression.QRegularExpression): bool =

  fcQTextEdit_find2(self.h, exp.h)

proc toPlainText*(self: QTextEdit, ): string =

  let v_ms = fcQTextEdit_toPlainText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toHtml*(self: QTextEdit, ): string =

  let v_ms = fcQTextEdit_toHtml(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toMarkdown*(self: QTextEdit, ): string =
